@@ -1,3 +1,7 @@
+2019-12-09  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/lto23.adb: New test.
+
 2019-12-09  Joseph Myers  <joseph@codesourcery.com>
 
 	PR middle-end/91226
